# uc1-integration

./: .gitignore  .gitmodules  LICENSE  README.md  gdb_start.sh  hv_start.sh  uc1.sh  west.yml
app/: prj.conf
app/src/: main.c
guides/: building-bao-crosscon-hv.md  building-wolfssl-zephyr-benchmark.md  building-zephyr-binary.md  crosscon-uc11-demo-script.md  debugging-bao-crosscon-hv.md  flashing-firmware-on-wifi.md  lpcxpresso55s69-flashing-guide.md
guides/bao-crosscon-hypervisor/: building-bao-crosscon-hv.md  config.c
guides/bao-crosscon-hypervisor/sources/: Dockerfile  makefile-patch.diff
hello_at/: CMakeLists.txt  prj.conf
hello_at/src/: main.c
hello_world/src/: main.c
hello_world_vm0/: app.overlay
hello_world_vm0/src/: main.c
hello_world_vm1/src/: main.c
resources/building-bao-hypervisor/: Dockerfile  config.c  config_mtls_puf_vms.c  config_mtls_single_vm.c  config_single_vm_bm.c  config_single_vm_zephyr.c  makefile-patch.diff  puf_integration_without_wifi.c
resources/building-bao-hypervisor/files/: LPCScrypt_Patched_2.1.3.deb  MCU-Link_Patched_3.153.deb
resources/overlays/: mtls_puf_vm1.overlay
resources/wolfssl/: user_settings.h
timer_test/: prj.conf
timer_test/src/: main.c
tls_client/: CMakeLists.txt  app.overlay  prj.conf
tls_client/src/: ca-cert.h  client-cert.h  client-key.h  main.c  ssl_certs.h  wifi_config.h
wifi_app/: prj.conf
wifi_app/src/: .gitignore  main.c  wifi_config_default.h
